<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"
        />
    <EditText
        android:id="@+id/lblName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibration_time"
        />
    <RadioGroup
        android:id="@+id/vibe_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/vibe_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_second"/>
        <RadioButton
            android:id="@+id/vibe_radio_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_second"/>
        <RadioButton
            android:id="@+id/vibe_radio_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_second"/>
    </RadioGroup>


</LinearLayout>
